BubbleSort int 배열을 인자로 받도록 변경